Fixed vAlign columns not taking up full width in IE9

--- a/grid-classes.scss
+++ b/grid-classes.scss
@@ -345,6 +345,8 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 			}
 
 			&[class*='grid--vAlign'][class*='grid--cols'] {
+				display: block;
+
 				> * {
 					display: inline-block;
 					margin-right: -4px;
